# pcsi-fewshot-cvrp

./: .gitignore  README.md  pyproject.toml  setup.py
FewShotCVRP/: ea.py  ea_parallel.py  few_shot.py
FewShotCVRP/bo/: bo_ei_hvea.py  bo_pure.py  bo_torch.py  gp_fitting.py
FewShotCVRP/bo/kpcabo/: kpca.py  kpcabo.py  kpcabo_torch.py  transforms.py
FewShotCVRP/cpp/: cvrp.cpp
FewShotCVRP/dataset/: parse_and_optimize.py  theta_control_loader.py
FewShotCVRP/examples/: runbg.sh
FewShotCVRP/examples/analysis/: bo_timing_by_step.csv  collect_cpu_env.sh  ea-runs-config.json  ea_runs.py  ea_stats_store.py  kpcabo_timing_by_step.csv  runs-analysis.ipynb  statistics.ipynb  theta_control_parity.ipynb
FewShotCVRP/examples/bo_study/: bo-nn-debug.ipynb  bo-torch.ipynb  kernel-pca-debug-data.npz  kpcabo-nn-debug.ipynb
FewShotCVRP/examples/few_shot/: few_shot_example.ipynb
FewShotCVRP/examples/noise_study/: noise_study.ipynb  noise_study.py  noise_study_logger.py  noise_study_nn.py
FewShotCVRP/examples/params_search/: configs_loader.py  kpca-bo-nn-config.json  nn-debug.ipynb  nn-experiment-config.json  nn.py  nn_analysis.ipynb  nn_parallel.py  nn_parallel_kpcabo.py  params_exp.ipynb  params_search.ipynb  params_search.py  rs-experiment-config.json  rs.py  simulation.py
FewShotCVRP/nn/: fnn.py
FewShotCVRP/pipelines/kpcabo_nn/: README.md  __init__.py  config.py  interfaces.py  pipeline.py  run_cvrp_pipeline.py  simulation.py  snapshotting.py
FewShotCVRP/utils/: fixed_queue.py  latex-preambula.tex  logs.py  plots.py
tests/: test_cvrp_cpp.py
(+29 files in other folders)
