[build-system]
requires = [
  "setuptools>=80",
  "wheel",
  "pybind11>=3.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "FewShotCVRP"
version = "0.1.0"
description = "A few-shot learning optimization for the Capacitated Vehicle Routing Problem"
authors = [{ name = "Kirill Antonov", email = "kiralexant@yandex.ru" }, { name = "Maxim Buzdalov" }]
requires-python = ">=3.10.16"
readme = "README.md"
dependencies = ["numpy>=2.2.6", 
                "numba>=0.61.2", 
                "pytest>=8.4.1",
                "rich>=14.1.0",
                "matplotlib>=3.10.5",
                "pandas>=2.3.1",
                "pyarrow>=21.0.0",
                "seaborn>=0.13.2",
                "scikit-learn>=1.7.1",
                "scipy>=1.15.3",
                "torch>=2.8.0",
                "botorch>=0.15.1",
                "gpytorch>=1.14"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["FewShotCVRP", "FewShotCVRP.*"]
